--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Highways-and-Highway-Transportation_66482
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66482-h/images/cover.jpg
 creator:
   author:
     agent_name: Chatburn, George R.
     gutenberg_agent_id: '53833'
     url: http://www.gutenberg.org/2009/agents/53833
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66482#Highways-and-Highway-Transportation
 gutenberg_issued: '2021-10-06'
 identifiers:
   gutenberg: '66482'
